--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "jest": "^24.0.0",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-npm": "^2.0.0",
     "rollup-plugin-replace": "^2.1.0",
     "uglify-js": "^3.4.9",
-    "zlib": "^1.0.5",
-    "jest": "^24.0.0"
+    "zlib": "^1.0.5"
   }
 }
